fix: solved some error with the css spacing

--- a/src/components/Layout/Layout.styles.scss
+++ b/src/components/Layout/Layout.styles.scss
@@ -9,8 +9,5 @@
 
 .layout__content {
     width: 100%;
-    height: 100vw;
-    padding-top: 5vw;
-    padding-left: 12px;
-    padding-top: 12px;
+    padding: 3vw 12px;
 }
