--- a/src/components/VideoGrid/VideoGrid.styles.scss
+++ b/src/components/VideoGrid/VideoGrid.styles.scss
@@ -6,8 +6,7 @@
     display: grid;
     place-items: center;
     grid-template-columns: repeat(auto-fill, minmax(308px, 1fr));
-    column-gap: 2vw;
-    row-gap: 2vw;
+    row-gap: 72px;
     grid-auto-rows: 216px;
 
     &__load-more-row {
